# AWS-Lambda-With-Rust

./: Cargo.toml  README.md
src/: main.rs
