[package]
name = "aws-lambda-with-rust"
version = "0.1.0"
authors = ["Pankaj Chaudhary <pankajchaudhary172@gmail.com>"]
edition = "2018"
autobins = false

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.1"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
